# cmd-utils-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: cast_to_io_error.rs  cmd_pipe.rs  cmd_pipe_to_file.rs  cmd_run.rs  cmd_to_file.rs
src/: cmd_pipe.rs  cmd_spawn.rs  cmd_to_file.rs  lib.rs
